--- a/WarehouseEcommerce/Views/Theme/University/Home/page.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Home/page.cshtml
@@ -32,7 +32,7 @@
                 <div class="container">
                     <div class="nb_sec blogdetWrapsec">
                         <div class="row">
-                            <div class="col-lg-12 col-xl-12 blogdetWrap">
+                            <div class="col-lg-7 col-xl-8 blogdetWrap">
                                 <span class="blgImgMain">
                                     <img src="@(!string.IsNullOrEmpty(Model.Image)? ViewBag.BaseFilePath + Model.Image : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" alt="@Model.ImageAltTag" />
                                 </span>
@@ -47,100 +47,40 @@
                                 </div>
 
                                 <div class="contentSec">
-                               @Html.Raw(Model.Content)
+                                    @Html.Raw(Model.Content)
                                 </div>
                             </div>
-                            @*<div class="col-lg-5 col-xl-4">
-                                <div class="youmayalLikesec">
-                                    <h3 class="head">You may also like</h3>
-                                    <ul class="ymalList">
-                                        <li>
-                                            <div class="ymalBox">
-                                                <span class="imgwrap">
-                                                    <img src="images/blogimages/2.jpg" alt="">
-                                                </span>
-                                                <div class="contwrap">
-                                                    <h3 class="ymalListHead">There are many variations..</h3>
-                                                    <p class="content">
-                                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia...
-                                                    </p>
-                                                    <span class="date">21-07-2019</span>
-                                                </div>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="ymalBox">
-                                                <span class="imgwrap">
-                                                    <img src="images/blogimages/3.jpg" alt="">
-                                                </span>
-                                                <div class="contwrap">
-                                                    <h3 class="ymalListHead">There are many variations..</h3>
-                                                    <p class="content">
-                                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia...
-                                                    </p>
-                                                    <span class="date">21-07-2019</span>
-                                                </div>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="ymalBox">
-                                                <span class="imgwrap">
-                                                    <img src="images/blogimages/1.jpg" alt="">
-                                                </span>
-                                                <div class="contwrap">
-                                                    <h3 class="ymalListHead">There are many variations..</h3>
-                                                    <p class="content">
-                                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia...
-                                                    </p>
-                                                    <span class="date">21-07-2019</span>
-                                                </div>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="ymalBox">
-                                                <span class="imgwrap">
-                                                    <img src="images/blogimages/2.jpg" alt="">
-                                                </span>
-                                                <div class="contwrap">
-                                                    <h3 class="ymalListHead">There are many variations..</h3>
-                                                    <p class="content">
-                                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia...
-                                                    </p>
-                                                    <span class="date">21-07-2019</span>
-                                                </div>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="ymalBox">
-                                                <span class="imgwrap">
-                                                    <img src="images/blogimages/3.jpg" alt="">
-                                                </span>
-                                                <div class="contwrap">
-                                                    <h3 class="ymalListHead">There are many variations..</h3>
-                                                    <p class="content">
-                                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia...
-                                                    </p>
-                                                    <span class="date">21-07-2019</span>
-                                                </div>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="ymalBox">
-                                                <span class="imgwrap">
-                                                    <img src="images/blogimages/1.jpg" alt="">
-                                                </span>
-                                                <div class="contwrap">
-                                                    <h3 class="ymalListHead">There are many variations..</h3>
-                                                    <p class="content">
-                                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia...
-                                                    </p>
-                                                    <span class="date">21-07-2019</span>
-                                                </div>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>*@
+                            <div class="col-lg-5 col-xl-4">
+                                @if (ViewBag.BlogList != null)
+                                {
+                                     var blogList = ViewBag.BlogList as List<Ganedata.Core.Entities.Domain.WebsiteContentPages>; 
+
+                                    <div class="youmayalLikesec">
+                                        <h3 class="head">You may also like</h3>
+                                        <ul class="ymalList">
+                                            @foreach (var item in blogList)
+                                            {
+
+                                                <li>
+                                                    <div class="ymalBox">
+                                                        <span class="imgwrap">
+                                                            <img src="@(!string.IsNullOrEmpty(item.Image)? ViewBag.BaseFilePath + item.Image : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" alt="@item.ImageAltTag" />
+                                                        </span>
+                                                        <div class="contwrap">
+                                                            <h3 class="ymalListHead">@item.Title</h3>
+                                                            <p class="content">
+                                                              @item.ShortDescription
+                                                            </p>
+                                                            <span class="date">@item.DateCreated.ToString("MMMM dd, yyyy")</span>
+                                                        </div>
+                                                    </div>
+                                                </li>
+                                            }
+                                        </ul>
+                                    </div>
+                                }
+                             
+                            </div>
                         </div>
                     </div>
                 </div>
