--- a/WarehouseEcommerce/Views/Theme/University/Products/GroupedProductDetail.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/GroupedProductDetail.cshtml
@@ -11,7 +11,7 @@
 
 
 }
-<div id="product-product" class="container custom-max-width m-auto kit-product">
+<div id="product-product" class="container m-auto kit-product">
     <div class="row">
         <div id="content" class="col-md-12 col-sm-12">
             <ul class="breadcrumb">
