--- a/WarehouseEcommerce/Views/Theme/University/Products/KitProductDetail.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/KitProductDetail.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = Model?.Name + " | " + ViewBag.SiteDescription ?? "";
 }
-<div id="product-product" class="container custom-max-width m-auto kit-product">
+<div id="product-product" class="container m-auto kit-product">
     <div class="row">
         <div id="content" class="col-lg-12 col-md-12">
             <ul class="breadcrumb">
