--- a/WarehouseEcommerce/Views/Theme/University/Shared/_SpecialProductPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_SpecialProductPartial.cshtml
@@ -17,7 +17,7 @@
                                 @*<img src="~/Content/Theme/University/app/images/featured_product/1.jpg" alt="" />*@
                             </span>
                             <div class="prd_det_sec">
-                                <h4 class="prd_name">@item.Name</h4>
+                                <h4 title="@item.Name" class="prd_name">@item.Name</h4>
                                 <span class="prd_amnt"> @Model.CurrencySign @item.SellPrice</span>
                             </div>
                         </a>
