--- a/WarehouseEcommerce/Views/Theme/University/User/Account.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/User/Account.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Account";
 }
 
-<div class="row about bg-white custom-max-width m-auto pb-0">
+<div class="row about bg-white m-auto pb-0">
             @Html.Partial("_AccountSideBar")
             <div class="col-lg-9 col-md-12 bg-white login my-account">
                 <div class="about-cnt">
