--- a/WarehouseEcommerce/Views/Theme/Smart/Shared/_TopHeaderPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Shared/_TopHeaderPartial.cshtml
@@ -3,7 +3,7 @@
     var siteProperties = ViewBag.TenantWebsite as caTenantWebsites;
 }
 <div id="top-header" class="sticky-header">
-    <header class="custom-header-container">
+    <header class="custom-header-container smart-header">
         <div class="custom-container">
             <div class="header-row custom-max-width m-auto pl-10 pr-10">
                 <div class="head-logo">
