--- a/WarehouseEcommerce/Views/Theme/University/Home/page.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Home/page.cshtml
@@ -8,7 +8,7 @@
     if (ViewBag.BlogDetail == null)
     {
         <div class="about bg-white">
-            <div class="container card-container custom-max-width">
+            <div class="container card-container">
                 <div class="row">
                     <div class="col-md-12 col-sm-12 bg-white my-account login">
                         <div class="about-cnt">
