--- a/WarehouseEcommerce/Views/Theme/University/User/OrderHistory.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/User/OrderHistory.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "OrderHistory";
 }
 
-    <div class="about bg-white custom-max-width m-auto pb-0">
+    <div class="about bg-white m-auto pb-0">
                 @Html.Partial("_AccountSideBar")
                 <div class="col-md-9 col-sm-12 bg-white">
                     <div class="about-cnt">
