fixed check boxes issue in university's _DynamicFilters.cshtml Imported from Changeset 2509

--- a/WarehouseEcommerce/Content/Theme/University/UniversityCustomStyle.css
+++ b/WarehouseEcommerce/Content/Theme/University/UniversityCustomStyle.css
@@ -27,3 +27,13 @@ white-space: nowrap;
     white-space: nowrap;
     margin-bottom: unset;
 }
+.uni-pages-main .nb_prd_filterwrap .list-group-item {
+    display: flex;
+    align-items: center;
+}
+.uni-pages-main .nb_prd_filterwrap .list-group-item input {
+    margin-right: 6px;
+    margin-top: unset;
+    width: 18px;
+    height: 18px;
+}
