--- a/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
 
             </div>
         }*@
-        <div class="container-fluid pl-0 pr-0  uni-pages-pt uni-pages-main">
+        <div class="pl-0 pr-0  uni-pages-pt uni-pages-main">
             @Scripts.Render("~/bundles/jquery")
             <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
                     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
